--- a/big_data_level_1_sports.ipynb
+++ b/big_data_level_1_sports.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUr9EOeSrIjyavPXpwBFU9",
+      "authorship_tag": "ABX9TyNcqlfhuZQYdP765iwsMjl1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,26 +34,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBPDZUZvOE1b",
-        "outputId": "7d3b82ae-18c8-4204-84c7-720395602c51"
+        "outputId": "ee05f8fc-3684-49e4-a17f-cdf7ff580f64"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (185.125.190.36)] [\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Connecting to security.ubun\r                                                                               \rGet:2 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
-            "\r0% [1 InRelease gpgv 242 kB] [2 InRelease 14.2 kB/88.7 kB 16%] [Connecting to s\r                                                                               \rHit:3 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "\r0% [1 InRelease gpgv 242 kB] [2 InRelease 15.6 kB/88.7 kB 18%] [Waiting for hea\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Waiting for headers] [Waiti\r                                                                               \rHit:4 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "\r0% [1 InRelease gpgv 242 kB] [Waiting for headers] [Waiting for headers] [Waiti\r                                                                               \rGet:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Get:6 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
-            "Ign:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "\r0% [Working]\r            \rGet:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "\r0% [Waiting for headers] [Waiting for headers] [1 InRelease 0 B/3,626 B 0%] [Wa\r0% [Waiting for headers] [Waiting for headers] [Waiting for headers] [Waiting f\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [Waiting for headers] [Wait\r                                                                               \rGet:2 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [2 InRelease 14.2 kB/88.7 k\r                                                                               \rGet:3 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [2 InRelease 14.2 kB/88.7 k\r                                                                               \rHit:4 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "\r0% [1 InRelease gpgv 3,626 B] [Waiting for headers] [2 InRelease 14.2 kB/88.7 k\r                                                                               \rIgn:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:7 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
             "Hit:9 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Hit:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
-            "Fetched 261 kB in 3s (83.0 kB/s)\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
+            "Get:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease [15.9 kB]\n",
+            "Get:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
+            "Get:14 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,164 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [3,020 kB]\n",
+            "Get:16 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,109 kB]\n",
+            "Get:17 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,551 kB]\n",
+            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,188 kB]\n",
+            "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,452 kB]\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,230 kB]\n",
+            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,329 kB]\n",
+            "Get:22 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic/main amd64 Packages [45.3 kB]\n",
+            "Get:23 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [50.8 kB]\n",
+            "Fetched 16.5 MB in 6s (2,586 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -90,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PtwUdk_5ObMi",
-        "outputId": "2ff8b5dc-8d8a-4bc4-c476-2f3e03205059"
+        "outputId": "4d1346f1-7a15-48b4-b768-35ed3c85876f"
       },
       "execution_count": 2,
       "outputs": [
@@ -98,16 +108,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-12 02:39:07--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
+            "--2022-10-15 18:15:17--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 914037 (893K) [application/java-archive]\n",
-            "Saving to: ‘postgresql-42.2.9.jar.1’\n",
+            "Saving to: ‘postgresql-42.2.9.jar’\n",
             "\n",
-            "postgresql-42.2.9.j 100%[===================>] 892.61K  4.81MB/s    in 0.2s    \n",
+            "postgresql-42.2.9.j 100%[===================>] 892.61K  4.72MB/s    in 0.2s    \n",
             "\n",
-            "2022-10-12 02:39:08 (4.81 MB/s) - ‘postgresql-42.2.9.jar.1’ saved [914037/914037]\n",
+            "2022-10-15 18:15:18 (4.72 MB/s) - ‘postgresql-42.2.9.jar’ saved [914037/914037]\n",
             "\n"
           ]
         }
@@ -123,7 +133,7 @@
       "metadata": {
         "id": "RshRzRWzvSKu"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +145,7 @@
       "metadata": {
         "id": "A1-zJr1U3vuf"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -154,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GNJSWLIN2JTP",
-        "outputId": "f68dcea5-6f0b-47c7-dfec-921837a50fd4"
+        "outputId": "70ec5b52-82eb-4bb4-d630-5078d68ed136"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eZeZUfUk6Zsy",
-        "outputId": "92395f51-fadb-4031-a8e6-0805a8dd3524"
+        "outputId": "8ecde658-1d87-4a8d-be53-5b2df7cfdbab"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9OuD73WS6qH0",
-        "outputId": "1165e5fe-0e56-4a9e-89f0-3eb91a9eb965"
+        "outputId": "da8c2568-7316-4b1a-b5ca-c03792d0d535"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,7 +275,7 @@
       "metadata": {
         "id": "mKvvp3phA7ot"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -278,9 +288,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pJEtNXE1Cvth",
-        "outputId": "8bcec201-4b9f-4097-919c-9ad69b30554b"
+        "outputId": "3db50e87-96a2-49fb-b3b8-a8d33ac92934"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +330,7 @@
         "id": "qQc8Kz7e68Fd",
         "outputId": "83ab8488-ed20-4c96-ef78-c12122efd41d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,15 +356,15 @@
       "source": [
         " # Configuration for RDS instance\n",
         "mode=\"append\"\n",
-        "jdbc_url = \"jdbc:postgresql://*:5432/sports\"\n",
-        "config = {\"user\":\"*\",\n",
-        "          \"password\": \"*\",\n",
+        "jdbc_url = \"jdbc:postgresql://mypostgresdb.ceiuqhog03bg.us-east-2.rds.amazonaws.com:5432/sports\"\n",
+        "config = {\"user\":\"root\",\n",
+        "          \"password\": \"postgres\",\n",
         "          \"driver\":\"org.postgresql.Driver\"}"
       ],
       "metadata": {
         "id": "8iqgy18T7t5O"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -367,7 +377,54 @@
       "metadata": {
         "id": "nQN4Wi0e7239"
       },
-      "execution_count": 12,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "products = df.select(['product_id','product_title']).distinct()\n",
+        "products.show(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wE-x8gge2sqO",
+        "outputId": "486c2c7a-92a8-4574-d935-9a0993575203"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+--------------------+\n",
+            "|product_id|       product_title|\n",
+            "+----------+--------------------+\n",
+            "|B0092702VE|Abu Garcia Revo S...|\n",
+            "|B00HZ9WTVC|Lee 90355 Cutter ...|\n",
+            "|B00WS4FRQ8|BEEWARE Targets -...|\n",
+            "|B00AKJVYYC|NEW Callaway RAZR...|\n",
+            "|B00DIPSOM0|GoSports Ladder T...|\n",
+            "+----------+--------------------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write DataFrame to table\n",
+        "\n",
+        "products.write.jdbc(url=jdbc_url, table='products', mode=mode, properties=config)"
+      ],
+      "metadata": {
+        "id": "b8h4Cz0E2n-i"
+      },
+      "execution_count": 14,
       "outputs": []
     }
   ]
