--- a/big_data_level_1_home_improvement.ipynb
+++ b/big_data_level_1_home_improvement.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuerUxKMoj6A37tLeJooq+",
+      "authorship_tag": "ABX9TyN7aU2UbMTzxxPfPDGRpDSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -102,7 +102,7 @@
         "id": "cXTwGNIbRLOC",
         "outputId": "0b6dadb9-4e21-458b-83fe-042413d5be37"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "U8hl1t0-RQIe"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "id": "lnjp7PaIRT_r",
         "outputId": "9e269010-4f28-4de5-8a2e-a965fc270315"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "id": "awCAVnuHRbhK",
         "outputId": "66d35950-68b7-48ec-b3b1-41a6f1239790"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "FWBjPb_0Rcxq",
         "outputId": "24389bb1-f578-4475-d5a1-c19eb98552b1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "rIl8SfUiReLy"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
         "id": "PwIdHwAuRgs4",
         "outputId": "e11e4a0d-7b60-422c-ad85-860725704b0e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
         "id": "hKwP4ztARl8B",
         "outputId": "d6f83ba5-80f7-43e0-f902-a45cc9ad3ced"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,15 +343,15 @@
       "source": [
         "# Configuration for RDS instance\n",
         "mode=\"append\"\n",
-        "jdbc_url = \"jdbc:postgresql://mypostgresdb.ceiuqhog03bg.us-east-2.rds.amazonaws.com:5432/home_improvement\"\n",
-        "config = {\"user\":\"root\",\n",
-        "          \"password\": \"postgres\",\n",
-        "          \"driver\":\"org.postgresql.Driver\"}"
+        "jdbc_url = \"*\"\n",
+        "config = {\"user\":\"*t\",\n",
+        "          \"password\": \"*\",\n",
+        "          \"driver\":\"*\"}"
       ],
       "metadata": {
         "id": "bLfEzL5PRn5o"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +364,7 @@
       "metadata": {
         "id": "fCME5ORIRpBp"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "id": "pFONEHjvUkqe",
         "outputId": "6a79f0af-8c8d-4960-ff5f-890e5d3d6530"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,15 +406,15 @@
       "source": [
         "# Configuration for RDS instance\n",
         "mode=\"append\"\n",
-        "jdbc_url = \"jdbc:postgresql://mypostgresdb.ceiuqhog03bg.us-east-2.rds.amazonaws.com:5432/home_improvement\"\n",
-        "config = {\"user\":\"root\",\n",
-        "          \"password\": \"postgres\",\n",
-        "          \"driver\":\"org.postgresql.Driver\"}"
+        "jdbc_url = \"*\"\n",
+        "config = {\"user\":\"*\",\n",
+        "          \"password\": \"*\",\n",
+        "          \"driver\":\"*\"}"
       ],
       "metadata": {
         "id": "q2-YNETTWg1G"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
       "metadata": {
         "id": "f56H5OvDVr91"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
         "id": "zzJRwTznvSKH",
         "outputId": "9b70b20d-ef56-49c2-9901-5a6dafad657d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
